--- a/sage_latex_template_3/Bins.Rmd
+++ b/sage_latex_template_3/Bins.Rmd
@@ -9,7 +9,7 @@ output:
       latex_engine: pdflatex
       number_sections: true
 bibliography: bibliography.bib
-abstract: "Matching in cluster-randomized trials (CRTs) is important, but there is no best practice. When baseline data is available, we suggest a strategy that can be used to identify a preferred weighting of pertinent variables to achieve the desired balance between treatment and control groups across numerous potential confounding variables. This strategy involves iteratively: 1)computing the Mahalanobis distance, 2) finding the pairs that minimize the overall within-pair distance; 3) rerandomizing multiple times to generate the potential between-arm imbalance; then 4) reweighting the potential confounder.  To aid in the evaluation of step 3, we plot the between-arm differences for each variable with a parallel-coordinates plot. Investigators can compare plots of different weighting scheme to determine the one that best suits their needs.  We demonstrate application of the approach with the Swap-Out trial."
+abstract: "Matching in cluster-randomized trials (CRTs) is important, but there is no best practice. When baseline data is available, we suggest a strategy that can be used to identify a preferred weighting of pertinent variables to achieve the desired balance between treatment and control groups across numerous potential confounding variables. This strategy involves iteratively: 1) computing the Mahalanobis distance, 2) finding the pairs that minimize the overall within-pair distance; 3) rerandomizing multiple times to generate the potential between-arm imbalance; then 4) reweighting the potential confounder.  To aid in the evaluation of step 3, we plot the between-arm differences for each variable with a parallel-coordinates plot. Investigators can compare plots of different weighting scheme to determine the one that best suits their needs.  We demonstrate application of the approach with the Swap-Out trial."
 keywords: "cluster-randomized trials, matching"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 ---
@@ -22,16 +22,16 @@ date: "`r format(Sys.time(), '%B %d, %Y')`"
 
 
 # Introduction
-Individually randomized trials (IRTs) with blinding are the "strongest study design available" [@gatsonis2017methods] to efficacy of a treatment or an intervention. Unfortunately, cost and study design amongst other things mean some interventions can not be randomized on an individual level. 
+Individually randomized trials (IRTs) with blinding are the "strongest study design available" [@gatsonis2017methods] to test the efficacy of a treatment or an intervention. Unfortunately, cost and study design amongst other things mean some interventions can not be randomized on an individual level. 
 
-However, for design reasons, some interventions must be delivered to groups of subjects.  In these cases, it is at least cost-efficient and possibly scientifically necessary to gather data on subjects that are correlated with one another.  For example, suppose education researchers need to evaluate teacher training for elementary school teachers with respect to it's effect on literacy skills in third graders. Randomizing third graders to treatment or control conditions would not be practical-- it would imply training many, many teachers, and ignoring the majority of students as well as the variability of student within class.  In addition, some rural schools may have only one teacher, further complicating matters. Instead, researchers would randomize teachers, schools, or counties to the training or to the control condition and evaluate the effect on many students in each classroom. Trials where groups are randomized are called group-randomized or cluster-randomized trials (CRTs). Three reasons for conducting a CRTs are: (i) implementation occurs at the cluster level, (ii) to avoid contamination, and (iii) to measure intervention effects among cluster members who do not receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
+For design reasons some interventions must be delivered to groups of subjects. In these cases, it is at least cost-efficient and possibly scientifically necessary to gather data on subjects that are correlated with one another.  For example, suppose education researchers need to evaluate teacher training for elementary school teachers with respect to it's effect on literacy skills in third graders. Randomizing third graders to treatment or control conditions would not be practical-- it would imply training many, many teachers, and ignoring the majority of students as well as the variability of student within class.  In addition, some rural schools may have only one teacher, further complicating matters. Instead, researchers would randomize teachers, schools, or counties to the training or to the control condition and evaluate the effect on many students in each classroom. Trials where groups are randomized are called group-randomized or cluster-randomized trials (CRTs). Three reasons for conducting a CRTs are: (i) implementation occurs at the cluster level, (ii) to avoid contamination, and (iii) to measure intervention effects among cluster members who do not receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
 
 One challenge in CRTs is their limited sample size. Most CRTs have less than 30 independent units to randomize, though each unit may have thousands of dependent individuals [@balzer2012match]. In large IRTs, investigators expect randomization to balance confounders across each arm of the trial.  The reduced size of CRTs makes imbalance a threat to the causal interpretation of any observed treatment effect. Grouping similar units together, then randomizing, is one solution to this. Scholars debate the sizes of these groups, in particular, matching, which involves grouping 2 units together, vs. stratifying, where many more than 2 units are grouped[@PMVsStrat]. This article discusses matching. 
 
 Many authors debate matching in CRTs [@balzer2012match; @CRTrials2009; @gatsonis2017methods; @diehr1995breaking; @murray1998design; @imai2009essential;
 @PMVsStrat; @donner2007merits; @klar1997merits; @donner2000design; @martin1993effect]. Murray argues that "the choice of matching or stratification [of] factors is critical to the success of the procedure" [@murray1998design]. Some agree that caution must be used when matching a small number of clusters due to the decrease in power [@donner2000design; @klar1997merits; @balzer2012match; @martin1993effect]. Breaking matches, i.e., ignoring the matching during data analysis, addresses this [@diehr1995breaking], but perhaps only when there are a small number of large clusters [@donner2007merits].  Others argue that matching is effective in a small number of clusters as it "increases the chance of the intervention groups being well-balanced" [@donner2007merits]. Imai et al. argue that not matching, in small or large sample, is "equivalent to discarding a considerable fraction of one's data" [@imai2009essential]. However, in one trial "matching actually led to a loss in statistical efficiency" [@manun1994influence, @donner2000design]. Despite all this debate few authors discuss how to match the clusters [@raab2001balance]. 
 
-Our article is an extension of methods introduced previously [@gatsonis2017methods]. We suggest a method suitable for $a \; priori$ matching using baseline data. In section 2 we outline our method, section 3 applies it to data for the SWAPOUT trial, and section 4 is a brief discussion.
+Our article is an extension of methods introduced previously [@gatsonis2017methods]. We suggest a method suitable for $a \; priori$ matching using baseline data. In section 2 we outline our method, section 3 applies it to data for the Swap-Out trial, and section 4 is a brief discussion.
 
 # Methods <!-- (#sec:Method) trying to get numbering to work not sure how yet  -->
 
@@ -46,7 +46,7 @@ The initial step involves prioritizing variables $(1, 2,..., n)$ from units $(1,
 \end{eqnarray*}
 where $v_{ij}$ is the $i^{th}$ variable from unit $j$: each $\overline{V_j}$ contains pertinent variables from unit $j$. From here, we compute the Mahalanobois distance between two units.  This is the generalized $n$-dimensional distance across the variables; for two units $a$ and $b$ it is calculated as $d(\overline{V_a}, \overline{V_b}) = \sum_{k=1}^n \frac{(v_{ak} - v_{bk})^2}{s_k^2}$ where $s_k^2 = \frac{1}{m} \sum_{l=1}^m(v_{lk} - \overline{v_{\cdot k}})$ and $\overline{v_{\cdot k}} = \frac{1}{n} \sum_{i = 1}^m v_{ik}$.  Then we find the pairs of clusters that minimize the global Mahalanobis distance across all of the pairs of clusters.  This can be done in the R statistical programming environment [@R] using the \texttt{nmatch} function in the \texttt{designmatch} [@nmatch] package. 
  
-Once the matching is completed and we have pairs $(\overline{C_{11}}, \overline{C_{12}}), (\overline{C_{21}}, \overline{C_{22}}), ..., (\overline{C_{\frac{m}{2}1}}, \overline{C_{\frac{m}{2}2}}),$ where $C_{ij}$ is the $j$th cluster in the $i$th pair.  The first match in each pair will be randomized to either treatment or control, the second to the remainder. If cluster $C_{11}$ is randomized to treatment, we denote this as $C_{11}^T$, and this implies $C_{12}^C$, where the superscript indicates either treatment ($T$) or control($C$). Next, we find the per variable difference between the two groups: 
+Once the matching is completed and we have pairs $(\overline{C_{11}}, \overline{C_{12}}), (\overline{C_{21}}, \overline{C_{22}}), ..., (\overline{C_{\frac{m}{2}1}}, \overline{C_{\frac{m}{2}2}}),$ where $C_{ij}$ is the $j$th cluster in the $i$th pair.  The first match in each pair will be randomized to either treatment or control, the second to the remainder. If cluster $C_{11}$ is randomized to treatment, we denote this as $C_{11}^T$, and this implies $C_{12}^C$, where the superscript indicates either treatment ($T$) or control ($C$). Next, we find the per variable difference between the two groups: 
 \begin{eqnarray*}
  d_i = \frac{| \sum_{j = 1}^{\frac{m}{2}}C_{ij}^T - \sum_{j = 1}^{\frac{m}{2}}C_{ij}^C |}{\frac{m}{2}} 
 \end{eqnarray*}
@@ -63,10 +63,10 @@ which we combine to form
  \vdots & = & \vdots\\    
  \overline{V_m^*} & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*) .\\
 \end{eqnarray*} 
-If $s_a > s_b$, this has the effect of making clusters "further apart" with respect to variable $a$, so that the when we re-run the matching algorithm, we will get closer matches for variable $a$ than variable $b$.  After selecting $S$ We again find $d^*_r$ and plot them. The penalty in this process is that closer matches for variable $a$ are likely to imply reduced closeness in another variable, so compromises must be made.
+If $s_a > s_b$, this has the effect of making clusters "further apart" with respect to variable $b$, KEN I CHANGED THIS TO b B/C IT DIDN'T MAKE SENSE TO ME WITH a THERE. IS THAT RIGHT? so that the when we re-run the matching algorithm, we will get closer matches for variable $a$ than variable $b$.  After selecting $S$ We again find $d^*_r$ and plot them. The penalty in this process is that closer matches for variable $a$ are likely to imply reduced closeness in another variable, so compromises must be made.
 
 # Results
-To demonstrate the usefulness of this technique we present a brief summary of our randomization process using baseline data from the SWAPOUT trial (Cluster-randomized Non-inferiority Trial Comparing Mupirocin vs. Iodophor for Nasal Decolonization of ICU Patients to Assess Impact on Staphylococcus aureus Clinical Cultures and All-cause Bloodstream Infection During Routine Chlorhexidine Bathing) [@SOTrial]. In this non-inferiority trial, the investigators are studying whether bathing with chlorhexidine gluconate and swabbing with iodophor nasal swabs are an acceptable substitute for bathing with chlorhexidine but swabbing with the antibiotic mupirocin. In the REDUCE trial [@huang2013targeted] mupirocin nasal swabs and bathing with chlorhexidine reduced methycillin resistant Staphylococcus aureus in Hospital Corporation of America intensive care units (ICU). However, physicians are reluctant to use mupirocin, an antibiotic so broadly, so investigators are assessing "swapping" it with iodophor, a disinfectant. 
+To demonstrate the usefulness of this technique we present a brief summary of our randomization process using baseline data from the Swap-Out trial (Cluster-randomized Non-inferiority Trial Comparing Mupirocin vs. Iodophor for Nasal Decolonization of ICU Patients to Assess Impact on Staphylococcus aureus Clinical Cultures and All-cause Bloodstream Infection During Routine Chlorhexidine Bathing) [@SOTrial]. In this non-inferiority trial, the investigators are studying whether bathing with chlorhexidine gluconate and swabbing with iodophor nasal swabs are an acceptable substitute for bathing with chlorhexidine but swabbing with the antibiotic mupirocin. In the Reduce trial [@huang2013targeted] mupirocin nasal swabs and bathing with chlorhexidine reduced methycillin resistant Staphylococcus aureus in Hospital Corporation of America intensive care units (ICU). However, physicians are reluctant to use mupirocin, an antibiotic so broadly, so investigators are assessing "swapping" it with iodophor, a disinfectant. 
 
 Primary       | Secondary         |	Tertiary   |	Quaternary | Quinary
 ------------- | ----------------- | --------- | ---------- | ---------
@@ -81,13 +81,13 @@ CHG Adherence |
 
 Table: Abbreviations of variables used to randomize
 
-Data collected from electronic medical records and electronic billing systems were available for matching prior to randomization.  We used data from 20 months from 137 hospitals whose administrators had consented to participate. With this data, investigators met to prioritize baseline variables into several categories, as shown in Table 1: primary, secondary, tertiary, quaternary, quinary, and not relevant to randomization. For this trial, the investigators decided that average monthly attributable days (pt_days), Staphylococcus aureus Intensive Care Unit (ICU)-attributable cultures per 1,000 days (S aur rate), MRSA ICU-attributable cultures per 1,000 days (MRSA rate), all pathogen ICU-attributable bacteremia cultures per 1,000 days (All Blood), regional mupirocin resistance estimate (Mup-R), percent of admissions with MRSA diagnosis within a year (Hx MRSA), percent of mupirocin use admission to day 5 (Mup Adherence), and surveyed use of chlorhexidine gluconate (CHG Adherence) were all of primary importance. Of secondary importance were median ICU length of stay (Median LOS), and mean Elixhauser total score (Comorbidity Score). Of tertiary importance were the percentage of ICU medicaid patients (Medicaid), and whether or not a facility uses polymerase chain reactions to identify MRSA in blood (PCR Blood). The next group included percent admissions to skilled nursing facility (DC SNF), and the percent of admissions with Center for Disease Control and Prevention surveillance surgery (Surgery). The final group included whether the ICU had specialty units for oncology, bone marrow transplant, or transplant units (Onc_BMT_Trp), and if the ICU has bone marrow transplant or transplant units (BMT_Trp). <!--More information on each variable is available in Appendix 1.  -->  
+Data collected from electronic medical records and electronic billing systems were available for matching prior to randomization.  We used data from 20 months from 137 hospitals whose administrators had consented to participate. With this data, investigators met to prioritize baseline variables into several categories, as shown in Table 1: primary, secondary, tertiary, quaternary, quinary, and not relevant to randomization. For this trial, the investigators decided that average monthly attributable days (pt_days), Staphylococcus aureus Intensive Care Unit -attributable cultures per 1,000 days (S aur rate), MRSA ICU-attributable cultures per 1,000 days (MRSA rate), all pathogen ICU-attributable bacteremia cultures per 1,000 days (All Blood), regional mupirocin resistance estimate (Mup-R), percent of admissions with MRSA diagnosis within a year (Hx MRSA), percent of mupirocin use admission to day 5 (Mup Adherence), and surveyed use of chlorhexidine gluconate (CHG Adherence) were all of primary importance. Of secondary importance were median ICU length of stay (Median LOS), and mean Elixhauser total score (Comorbidity Score). Of tertiary importance were the percentage of ICU medicaid patients (Medicaid), and whether or not a facility uses polymerase chain reactions to identify MRSA in blood (PCR Blood). The next group included percent admissions to skilled nursing facility (DC SNF), and the percent of admissions with Center for Disease Control and Prevention surveillance surgery (Surgery). The final group included whether the ICU had specialty units for oncology, bone marrow transplant, or transplant units (Onc_BMT_Trp), and if the ICU has bone marrow transplant or transplant units (BMT_Trp). <!--More information on each variable is available in Appendix 1.  -->  
  
 Prior to randomization, investigators spent time using a web app built using the \texttt{Shiny} package in \texttt{R} that implements the strategy described in section 2. This enabled the investigators to quickly and easily change the weights applied to each potential matching variable.  The web app allows the investigators to set the bounds for each axis as well as the weights. We recommend deciding on tolerable maximum differences between study arms as well as desirable ranges of differences for each variables and using many combinations of strengths of matching until one is found which ensures randomization is likely to satisfy. In the well-known children's fable The Three Bears, Goldilocks tries three bowls of porridge, one is too hot, the other too cold, and the third is just right [@3Bears]. We recommend a similar procedure applied to strengths of matching, with perhaps more attempts.
 
 
 
-```{r IntroGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE}
+```{r IntroGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE, fig.cap="Possible randomizations for 3 different weights. The top left has no weighting and two axises exceed maximum values. The top right is matched strongly on the middle axis and the first and third exceed. The bottom was used in Swap-Out."}
 ## install.packages("designmatch")
 library(designmatch)
 
@@ -906,14 +906,13 @@ upViewport()
 
 ```
 
-
 Figure 1 demonstrates this process using three variables: attributable patient days per month, Staphylococcus aureus rate, and MRSA rate. After initial explorations on the web application, investigators agreed that a tolerable maximum mean difference between treatment and control arms for these variables were: 80 attributable patient days per month, 0.15 difference in Staphylococcus aureus infection rates, and 0.15 difference in MRSA rate. The graph on the top left shows the results of 300 re-randomizations when all the weights are equal, equivalent to using the raw values of each variables.  To read a parallel coordinates plot, trace a single gray line from "Pt Days" to "S aur rate" to "MRSA rate"; this shows the between- arm differences obtained from a single randomization.  The values in the upper left show that several randomizations exceeded the maximums in the second and third axis: there is a reasonable chance that if randomization occurred with this weighting the Staphylococcus aureus and MRSA rates would be imbalanced between the treatment and control arms. To rectify this, positive strengths must be added. In the top-right graph a strength of 8 has been applied to the Staphylococcus aureus rate. In this graph, the matching of hospitals is strongly adjusted so that hospitals with similar Staphylococcus aureus rates are paired. This results in low mean difference between the treatment and control arms in that variable. The values on the middle axis are all well below the maximum value: if randomization occurred using these strengths we are likely to get suitable balance in this variable. Unfortunately, there is a penalty. Hospitals with similar Staphylococcus aureus rates do not have similar attributable patient days per month and MRSA rates, which results in a few of these values exceeding the maximum. In particular, our investigators felt that the chance of attaining MRSA rates above 0.15 were too high for these strengths. The bottom plot shows the possible mean balances used in the actual randomization for these three variables, the strengths of matching for each variable were 1, 4, and 2, respectively. In all graphs, the black line indicates the mean value of all points on each axis.  We also use this value to help decide whether the matchine is acceptable.
 
 Our investigators used this approach with all 16 variables shown in table 1. After trying many weights they chose one with an agreeable balance between treatment and control arms for the variables of most importance.  The results can be seen in Figure 2.   For all the variables, none of the randomizations resulted in intolerable between-arm differences, and for most, the mean difference was much closer to 0 than the maximum tolerable.  When the trial was randomized we used this strength to match hospitals in the study, then randomized one member of each match to treatment and the other to control. 
 
 One variable in Figure 2, median length of stay, has the same value for all the re-randomizations. That is, for this variable, every assignment of treatment and control within the pairs results in the same mean difference in median length of stay between the control and treatment arms.  This is likely due to the very small variability on this variable-- the vast majority of the hospitals' had the same median length of stay. 
 
-```{r FullGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE}
+```{r FullGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE, fig.cap='Swap-Out investigators found weights used to make this possible randomization schema suitable.'}
 set.seed(11081966)
 
 ## install.packages("designmatch")
@@ -1663,7 +1662,7 @@ While the Goldilocks approach to randomizing does not ensure balance in the trea
 
 If investigators would like to use this method on studies with more than $2$ arms, $d^*_{i}$ can be redefined as, for example, the standard deviation between among the arms. 
 
-In SWAPOUT the number of units to randomize was odd. To address this, our \texttt{Shiny} web application allowed our investigators to choose if the unmatched unit was in the treatment or control arm. The $d_{i}$ was adjusted accordingly.
+In Swap-Out the number of units to randomize was odd. To address this, our \texttt{Shiny} web application allowed our investigators to choose if the unmatched unit was in the treatment or control arm. The $d_{i}$ was adjusted accordingly.
 
 We plan to publish the \texttt{Shiny} web app described above for investigators to use. This application will eventually be an interactive plot that enables users to click on each axis and view where low and high draws of that variable fall for other variables.  
 
