--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -46,7 +46,6 @@
   publisher={Wiley Online Library}
 }
 
-
 @article{doi,
   author = {Greevy, Robert  and Lu, Bo  and Silber, Jeffrey H. and Rosenbaum, Paul },
   title = {Optimal multivariate matching before randomization},
@@ -276,7 +275,7 @@
 
 @book{3Bears,
   title={The Old Nursery Stories and Rhymes ... Illustrated by John Hassall},
-  author={NURSERY STORIES. and HASSALL, John,},
+  author={NURSERY STORIES and HASSALL, John,},
   year={1904},
   publisher={Blackie \& Son, London}
 }
