--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -85,7 +85,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{June 20, 2017}
+  \date{June 21, 2017}
 
 
 \begin{document}
@@ -252,12 +252,13 @@ which we combine to form
 \end{eqnarray*}
 
 If \(s_a > s_b\), this has the effect of making clusters ``further
-apart'' with respect to variable \(b\), so that the when we re-run the
-matching algorithm, we will get closer matches for variable \(a\) than
-variable \(b\). After selecting \(S\) We again find \(d^*_r\) and plot
-them. The penalty in this process is that closer matches for variable
-\(a\) are likely to imply reduced closeness in another variable, so
-compromises must be made.
+apart'' with respect to variable \(b\), KEN I CHANGED THIS TO b B/C IT
+DIDN'T MAKE SENSE TO ME WITH a THERE. IS THAT RIGHT? so that the when we
+re-run the matching algorithm, we will get closer matches for variable
+\(a\) than variable \(b\). After selecting \(S\) We again find \(d^*_r\)
+and plot them. The penalty in this process is that closer matches for
+variable \(a\) are likely to imply reduced closeness in another
+variable, so compromises must be made.
 
 \section{Results}\label{results}
 
@@ -274,7 +275,7 @@ chlorhexidine but swabbing with the antibiotic mupirocin. In the Reduce
 trial \citep{huang2013targeted} mupirocin nasal swabs and bathing with
 chlorhexidine reduced methycillin resistant Staphylococcus aureus in
 Hospital Corporation of America intensive care units (ICU). However,
-physicians are reluctant to use mupirocin, an antibiotic so broadly, so
+physicians are reluctant to use mupirocin, an antibiotic, so broadly, so
 investigators are assessing ``swapping'' it with iodophor, a
 disinfectant.
 
@@ -357,7 +358,7 @@ these variables were: 80 attributable patient days per month, 0.15
 difference in Staphylococcus aureus infection rates, and 0.15 difference
 in MRSA rate. The graph on the top left shows the results of 300
 re-randomizations when all the weights are equal, equivalent to using
-the raw values of each variables. To read a parallel coordinates plot,
+the raw values of each variable. To read a parallel coordinates plot,
 trace a single gray line from ``Pt Days'' to ``S aur rate'' to ``MRSA
 rate''; this shows the between- arm differences obtained from a single
 randomization. The values in the upper left show that several
@@ -382,10 +383,10 @@ mean balances used in the actual randomization for these three
 variables, the strengths of matching for each variable were 1, 4, and 2,
 respectively. In all graphs, the black line indicates the mean value of
 all points on each axis. We also use this value to help decide whether
-the matchine is acceptable.
+the matching is acceptable.
 
 Our investigators used this approach with all 16 variables shown in
-table 1. After trying many weights they chose one with an agreeable
+Table 1. After trying many weights they chose one with an agreeable
 balance between treatment and control arms for the variables of most
 importance. The results can be seen in Figure 2. For all the variables,
 none of the randomizations resulted in intolerable between-arm
