--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -221,9 +221,11 @@ the two groups:
 
 for \(j = 1, 2, ..., n.\) This generates the vector
 \(D = (d_1, \ldots, d_n)\) of the average pairwise difference between
-the arms for each variable. We repeat this process of randomization
-\(R\) times and find \(D_r\), the vector of average differences between
-the two arms for the \(r\)th re-randomization. To visualize we draw a
+the arms for each variable. When the trial is complete, these
+differences are likely to be reported as evidence of the balance acieved
+in the randomization. We repeat this process of randomization \(R\)
+times and find \(D_r\), the vector of average differences between the
+two arms for the \(r\)th re-randomization. To visualize we draw a
 parallel coordinates plot where the \(j^{th}\) axis plots all \(D_r\)
 for \(r = 1, 2, ..., R\), as shown in the Figures below.
 
