--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -200,12 +200,23 @@
   publisher={American Public Health Association}
 }
 
-@misc{gatsonis2017methods,
+@misc{oldgatsonis2017methods,
   title={Methods in Comparative Effectiveness Research},
   author={Gatsonis, Constantine and Morton, Sally C},
   year={2017},
   publisher={CRC Press}
 }
+
+@incollection{gatsonis2017methods,
+  author       = {Ken Kleinman}, 
+  title        = {Cluster-Randomized Trials},
+  booktitle={Methods in Comparative Effectiveness Research},
+  publisher={CRC Press},
+  year={2017},
+  editor={Gatsonis, Constantine and Morton, Sally C}
+}
+
+
 
 @article{bates2014lme4,
   title={lme4: Linear mixed-effects models using Eigen and S4},
@@ -265,7 +276,7 @@
 
 @book{donner2000design,
   title={Design and Analysis of Cluster Randomization Trials in Health Research},
-  author={Donner, A. and Klar, N.},
+  author={Donner, Allan and Klar, Neil},
   isbn={9780340691533},
   lccn={00126639},
   url={https://books.google.com/books?id=QJZrQgAACAAJ},
@@ -275,7 +286,7 @@
 
 @book{3Bears,
   title={The Old Nursery Stories and Rhymes ... Illustrated by John Hassall},
-  author={NURSERY STORIES and HASSALL, John,},
+  author={Hassall, John,},
   year={1904},
   publisher={Blackie \& Son, London}
 }
@@ -295,7 +306,7 @@
 
 @book{CRTrials2009,
   title={Cluster Randomised Trials},
-  author={Hayes, Moulton},
+  author={Hayes, Richard J and Moulton Lawrence H.},
   year={2009},
   publisher={Chapman and Hall\/CRC}
 }
@@ -453,7 +464,7 @@
 
 @article{imai2009essential,
   title={The essential role of pair matching in cluster-randomized experiments, with application to the Mexican universal health insurance evaluation},
-  author={Imai, Kosuke and King, Gary and Nall, Clayton and others},
+  author={Imai, Kosuke and King, Gary and Nall, Clayton},
   journal={Statistical Science},
   volume={24},
   number={1},
