--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -25,7 +25,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Matching in Cluster Randomized Trials Using the Goldilocks Approach},
-            pdfauthor={S. Gwynn Sturdevant, Susan Huang, Ken Kleinman},
+            pdfauthor={S. Gwynn Sturdevant, Susan Huang, Richard Platt, Ken Kleinman},
             pdfkeywords={cluster-randomized trials, matching},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -80,7 +80,7 @@
   \title{Matching in Cluster Randomized Trials Using the Goldilocks Approach}
   \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-  \author{S. Gwynn Sturdevant, Susan Huang, Ken Kleinman}
+  \author{S. Gwynn Sturdevant, Susan Huang, Richard Platt, Ken Kleinman}
   \preauthor{\centering\large\emph}
   \postauthor{\par}
   \predate{\centering\large\emph}
