sending out for review

--- a/sage_latex_template_3/Binsv2.Rmd
+++ b/sage_latex_template_3/Binsv2.Rmd
@@ -3,13 +3,13 @@ title: "Matching in Cluster Randomized Trials Using the Goldilocks Approach"
 author: "S. Gwynn Sturdevant, Susan S. Huang, Richard Platt, Ken Kleinman"
 bibliography: bibliography.bib
 output:
+  word_document: default
   pdf_document:
     citation_package: natbib
     fig_caption: yes
     keep_tex: yes
     latex_engine: pdflatex
     number_sections: yes
-  word_document: default
 keywords: cluster-randomized trials, matching
 abstract: 'Matching in cluster-randomized trials (CRTs) is important for improving
   covariate balance in cluster characteristics across groups, but there is no best
@@ -34,7 +34,7 @@ abstract: 'Matching in cluster-randomized trials (CRTs) is important for improvi
 
 
 # Introduction
-Individually randomized trials (IRTs) with blinding are the "strongest study design available" [@gatsonis2017methods] to test the efficacy of a treatment or an intervention. However, for scientific and practical design reasons some interventions must be delivered to groups of subjects. In these cases, it is at least cost-efficient and may be scientifically necessary to gather data on subjects that are correlated with one another.  For example, suppose education researchers need to evaluate training for elementary school teachers with respect to its effect on literacy skills in third graders. Randomizing third graders to treatment or control conditions would not be practical-- it would require training many, many, teachers, and ignoring the majority of students as well as the variability of students within each class.  In addition, some rural schools may have only one teacher, further complicating matters. Instead, researchers would randomize teachers, schools, or counties to the training or to the control condition and evaluate the effect on multiple students in each classroom. Trials where groups are randomized are called group-randomized or cluster-randomized trials (CRTs). Three reasons for conducting a CRTs are: (i) because implementation occurs at the cluster level, (ii) to avoid contamination, and (iii) to measure intervention effects among cluster members who do not receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
+Individually randomized trials (IRTs) with blinding are the most rigorous way of determining whether a cause-effect relation exists between an intervention and an outcome  [e.g., @Sibbald1998]. However, for scientific and practical design reasons some interventions must be delivered to groups of subjects. In these cases, it is at least cost-efficient and may be scientifically necessary to gather data on subjects that are correlated with one another.  For example, suppose education researchers need to evaluate training for elementary school teachers with respect to its effect on literacy skills in third graders. Randomizing third graders to treatment or control conditions would not be practical-- it would require training many, many, teachers, and ignoring the majority of students as well as the variability of students within each class.  In addition, some rural schools may have only one teacher, further complicating matters. Instead, researchers would randomize teachers, schools, or counties to the training or to the control condition and evaluate the effect on multiple students in each classroom. Trials where groups are randomized are called group-randomized or cluster-randomized trials (CRTs). Three reasons for conducting a CRTs are: (i) because implementation occurs at the cluster level, (ii) to avoid contamination, and (iii) to measure intervention effects among cluster members who do not receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
 
 One challenge in CRTs is their limited sample size of randomizable units. Most CRTs have fewer than 30 independent units to randomize, though each unit may have thousands of individuals [@balzer2012match]. In large IRTs, investigators expect randomization to balance confounders across each arm of the trial.  The smaller number of randomizable units in CRTs makes imbalance a threat to the causal interpretation of any observed treatment effect. Stratified randomization, in which similar units are grouped together prior to randomization, is one solution to this. Scholars debate the sizes of these groups.  In particular, there is disagreement about the merits of matching, which involves grouping 2 units together, vs. stratification, where many more than 2 units are grouped[@PMVsStrat]. This article discusses matching. 
 
@@ -55,7 +55,7 @@ The initial step involves prioritizing variables $(1, 2,..., n)$ from units $(1,
  \vdots & = & \vdots\\    
  V_m & = & (v_{m1}, v_{m2},..., v_{mn})\\
 \end{eqnarray*}
-where $v_{ij}$ is the $j^{th}$ variable from unit $i$: each $V_i$ contains pertinent variables from unit $i$. From here, we compute the Mahalanobois distance between two units.  This is the generalized $n$-dimensional distance across the variables; for two units $a$ and $b$ it is calculated as $d(V_a, V_b) = \sum_{k=1}^n \frac{(v_{ak} - v_{bk})^2}{s_k^2}$ where $s_k^2 = \frac{1}{m} \sum_{l=1}^m(v_{lk} - v_{\cdot k})$ and $v_{\cdot k} = \frac{1}{n} \sum_{i = 1}^m v_{ik}$.  Then we find the pairs of clusters that minimize the global Mahalanobis distance across all of the pairs of clusters.  This can be done in the R statistical programming environment [@R] using the \texttt{nmatch} function in the \texttt{designmatch} package [@nmatch]. 
+where $v_{ij}$ is the $j^{th}$ variable from unit $i$: each $V_i$ contains pertinent variables from unit $i$. From here, we compute the Mahalanobois distance between two units.  This is the generalized $n$-dimensional distance across the variables; for two units $a$ and $b$ it is calculated as $d(V_a, V_b) = \sum_{k=1}^n \frac{(v_{ak} - v_{bk})^2}{s_k^2}$ where $s_k^2 = \frac{1}{m} \sum_{l=1}^m(v_{lk} - v_{\cdot k})$ and $v_{\cdot k} = \frac{1}{n} \sum_{i = 1}^m v_{ik}$.  Then we find the way of pairing the clusters that minimizes the global Mahalanobis distance across all of the possible pairs of clusters.  This is a short way of describing a lengthy process: we pair cluster 1 with cluster 2 and cluster 3 with cluster 4, and so forth.  Then we calculate the Mahalanobis distance between each of these pairs, and sum it.  Then we pair cluster 1 with cluster 3 and cluster 2 with cluster 4, and we continue untill we have the summed Mahalanobis distance for all of the possible ways to pair the clusters.  The set with the minimum sum is the best way to match the clusters.   This process can be done in the R statistical programming environment [@R] using the \texttt{nmatch} function in the \texttt{designmatch} package [@nmatch]. 
  
 Once the matching is completed, we have pairs $(C_{11}, C_{12}), (C_{21}, C_{22}), ..., (C_{\frac{m}{2}1}, C_{\frac{m}{2}2}),$ where $C_{ij}$ is the $j$th cluster in the $i$th pair.  The first match in each pair will be randomized to either treatment or control, the second to the other arm. If cluster $C_{11}$ is randomized to treatment, we denote this as $C_{11}^T$, and this implies $C_{12}^C$, where the superscript indicates either treatment ($T$) or control ($C$). Next, we find the per variable difference between the two groups: 
 \begin{eqnarray*}
@@ -74,7 +74,7 @@ which we combine to form
  \vdots & = & \vdots\\    
  V_m^* & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*) .\\
 \end{eqnarray*} 
-If $s_a > s_b$, this has the effect of increasing the distance between units for variable $a$, relative to variable $b$.  Then, counter-intuitively, when we re-run the matching algorithm, we will get closer matches for variable $a$ than variable $b$.  Similarly, as the weight $s_r$ for some variable $r$ approaches 0, the matching algorithm views the distance between any two clusters with respect to variable $r$ as very small, relative to the other variables.  If $s_r =0$, $r$ is not included in the matching at all.
+If $s_a > s_b$, we are multiplying variable $a$ by a larger value than variable $b$, and this has the effect of increasing the distance between clusters for variable $a$, relative to variable $b$.  Then, counter-intuitively, when we re-run the matching algorithm, we will get closer matches for variable $a$ than variable $b$, because the Mahalanobis distance minimization will minimize this larger distance on variable $a$.  Similarly, as the weight $s_r$ for some variable $r$ approaches 0, the distance between any two clusters with respect to variable $r$ becomes very small, relative to the other variables.  If $s_r =0$, $r$ is effectively not included in the matching at all-- all clusters are perfectly matched on that variable.
 
 After selecting $S$, we again find the between-arm differences for each variable, $D_r$ and plot them. The cost of a high weight for variable $a$ in this process is that closer matches for variable $a$ are likely to imply reduced closeness in another variable, so compromises must be made.  Investigators can perform iterative selections of S to select the final set of weights that generate a distribution of randomizations that best reflect the most desired and tolerable differences in specific characteristics between arms. 
 
@@ -87,6 +87,7 @@ Baseline data collected from HCA’s centralized data warehouse were available f
  
 Prior to randomization, investigators used an interactive web-based application built using the \texttt{Shiny} package in \texttt{R} that implements the strategy described in section 2. This enabled the investigators to quickly and easily change the weights applied to each potential matching variable.  The web app allowed the investigators to set the desirable maximum between-arm differences for each variable as well as the relative weights.  We input tolerable maximum differences between study arms as well as desirable ranges of differences for each variable and compared many sets of variable weights until one was found that minimized the probability of undesirable variation in the actual randomization draw.
 
+In the Swap Out Trial, the number of units to randomize was odd. To address this, our \texttt{Shiny} web application allowed our investigators to choose if the unmatched unit was in the treatment or control arm. The $D_{r}$ was adjusted accordingly.
 
 ```{r IntroGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE, fig.cap="Possible randomizations for 3 different weights for three attributes: patient days (Pt days). ICU attributable S. aureus culture rate (S. aur rate), and MRSA rate.  Each light gray line represents a single rerandomization and the black line is the mean difference between arms.  The top left image has no weighting and two axes exceed maximum values. The top right is matched well on the middle axis, but the first and third have some randomization draws that would exceed the desired maximum values for the mean difference between the groups. The bottom scheme was selected to be used in the Mupirocin-Iodophor Swap Out Trial."}
 ## install.packages("designmatch")
@@ -1660,13 +1661,17 @@ makePlot(V = V, P = P, D = D, Tm = 300, NVs = 2, cols = 1:length(V))
 
 
 # Discussion
-For general use, we recommend deciding on tolerable maximum differences between study arms _a priori_ and testing many combinations of variables weights ($S$) until one is found which ensures that the eventual randomization is likely to satisfy.  We call this the Goldilocks Approach, after the well-known children's fable, The Three Bears, in which Goldilocks tries three bowls of porridge-- one is too hot, another too cold, and the third is just right [@3Bears]. We recommend a similar procedure applied to strengths of matching, with perhaps more attempts to find a suitable combination of variable weights.
+For general use, we recommend deciding on tolerable maximum differences between study arms _a priori_ and testing many combinations of variables weights ($S$) until one is found which ensures that the eventual randomization is likely to satisfy.  We call this the Goldilocks Approach, after the well-known children's fable, The Three Bears, in which Goldilocks tries three bowls of porridge-- one is too hot, another too cold, and the third is just right [@3Bears]. We recommend a similar procedure applied to strengths of matching, with perhaps more attempts to find a suitable combination of variable weights.  
 
-While the Goldilocks approach to trial randomization does not ensure balance between the treatment and control arms, it allows investigators to explore weighting schemes that impact matching and balance. Investigators who conduct CRTs and plan to match can use this method prior to randomizing to help ensure balance between treatment and control arms.
+It may bear reinforcement at this point that the many randomizations performed in the Goldilocks Approach do not constitute a search for the study randomization and treatment assignment with the optimal covariate balance.  The treatment assignments used in Goldilocks Approach are purely hypothetical.  We should think of them in the sense of "If we were to match with these weights, what sort of covariate balance would we be likely to obtain in our actual randomization?".  After we're found the set of weights that are just right, we formally randomly assign the members of each matched set to a study arm.  We expect a covariate balance that is similar to the ones seen in the parallel coordinates plot, but it is unlikely to be identical to any of the ones seen.
 
-In the Mupirocin-Iodophor Swap Out Trial, the number of units to randomize was odd. To address this, our \texttt{Shiny} web application allowed our investigators to choose if the unmatched unit was in the treatment or control arm. The $D_{r}$ was adjusted accordingly.
+While it is often possible to obtain satisfactory balance on many covariates at the same time using the Goldilocks appproach, there are limits, of course.  For example, we can effectively require perfect matches on categorical variables by using large weights for them.  If some categories have few members, the matches on the remaining variables are unlikely to be very close.  For example if we place a large weight on suburban vs. urban hospital location, and have only 8 urban hospitals, we will be unlikely to find good matches on the other characterstics among those 8 hospitals.
 
-We plan to publish the \texttt{Shiny} web app described above for any investigator to use. This application will eventually be an interactive plot that enables users to click on each axis and view where low and high draws of that variable fall for other variables.  
+The web app described above can be found at URL TO BE COMPLETED.  We invite the community to use this resource, which is still under developement.
+
+While the Goldilocks approach to trial randomization cannot ensure balance between the treatment and control arms, it allows investigators to explore weighting schemes that impact matching and balance. Investigators who conduct CRTs and plan to match can use this method prior to randomizing to help ensure balance between treatment and control arms.
+
+
 
 
 
