--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -281,7 +281,7 @@
 
 @book{murray1998design,
   title={Design and Analysis of Group-randomized Trials},
-  author={Murray, D.M.},
+  author={Murray, David M.},
   number={v. 29; v. 1998},
   isbn={9780195120363},
   lccn={97020411},
@@ -294,7 +294,7 @@
 
 @book{CRTrials2009,
   title={Cluster Randomised Trials},
-  author={Hayes, Richard J and Moulton Lawrence H.},
+  author={Hayes, Richard J. and Moulton Lawrence H.},
   year={2009},
   publisher={Chapman and Hall\/CRC}
 }
@@ -501,6 +501,17 @@
   pages={1016--1022},
   year={2000},
   publisher={Wiley Online Library}
+}
+
+@Article{sibbald1998,
+   Author={Sibbald, B.  and Roland, M.},
+   Title={{U}nderstanding controlled trials. {W}hy are randomised controlled trials important?},
+   Journal={BMJ},
+   Year={1998},
+   Volume={316},
+   Number={7126},
+   Pages={201},
+   Month={Jan}
 }
 
 @article{taveras2013rationale,
