bib fixes, trying fig layouts

--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -138,7 +138,7 @@
 
 @article{balzer2012match,
   title={Why Match in Individually and Cluster Randomized Trials?},
-  author={Balzer, Laura B and Petersen, Maya L and van der Laan, Mark J},
+  author={Balzer, Laura B and Petersen, Maya L and {van der Laan}, Mark J},
   year={2012},
   journal={U.C. Berkeley Division of Biostatistics Working Paper Series},
   number={294},
@@ -273,7 +273,7 @@
 }
 
 @book{3Bears,
-  title={The Old Nursery Stories and Rhymes ... Illustrated by John Hassall},
+  title={The Old Nursery Stories and Rhymes},
   author={Hassall, John},
   year={1904},
   publisher={Blackie \& Son, London}
@@ -286,7 +286,6 @@
   isbn={9780195120363},
   lccn={97020411},
   series={Design and Analysis of Group-randomized Trials},
-  url={https://books.google.com/books?id=cVLs3m4a9ZoC},
   year={1998},
   publisher={Oxford University Press}
 }
@@ -294,7 +293,7 @@
 
 @book{CRTrials2009,
   title={Cluster Randomised Trials},
-  author={Hayes, Richard J. and Moulton Lawrence H.},
+  author={Hayes, Richard J. and Moulton, Lawrence H.},
   year={2009},
   publisher={Chapman and Hall\/CRC}
 }
